# vs-spectra

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: cspectra-config.cmake.in
src/: Spectra.sln
src/Visual Studio/shared/libspectra/: common.h  libspectra.vcxproj  libspectra.vcxproj.filters  spectra_di_ng.h  spectra_di_ns.cpp  spectra_di_ns.h  spectra_di_sg.cpp  spectra_di_sg.h  spectra_di_ss.cpp  spectra_di_ss.h
src/include/: README.md
